# notificationfeed

./: .gitignore  LICENSE-AGPL.md  LICENSE-MIT.md  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vitest.config.ts
docs/: architecture.md  build-targets.md  glossary.md  ingestion-pipeline.md  ingestion-pipeline.pt-BR.md  ingestion-to-post-flow.md  notification-system.md  notification-system.pt-BR.md
docs/requirements/: categories.md  content-trees.md  creator-pages.md  fonts.md  ingestion.md  overview.md  persistence.md  platforms.md  profiles.md  users.md
docs/steps/: README.md
scripts/: generate-icons.mjs
src/: app.html  service-worker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: index.ts
src/lib/config/: back-settings.ts
src/lib/i18n/: category.ts  index.ts  store.svelte.ts  t-static.ts  t.ts  types.ts
src/lib/ingestion/: ingestion.scheduler.ts  post-manager.ts  retention.ts  scheduler.ts
src/lib/normalization/: atom.normalizer.test.ts  atom.normalizer.ts  canonical-post.ts  content-text.test.ts  content-text.ts  jsonfeed.normalizer.test.ts  jsonfeed.normalizer.ts  nostr.normalizer.test.ts  nostr.normalizer.ts  rss.normalizer.test.ts  rss.normalizer.ts
src/lib/notifications/: notification-engine.ts  os-notifier.ts  permission.ts  pipeline-event-consumer.ts
src/lib/persistence/: activity.store.ts  db.ts  (+27 more)
src/routes/: +layout.svelte  +page.svelte
static/: manifest.json  manifest.webmanifest  sw.js
(+329 files in other folders)
