[package]
name = "notfeed"
version = "0.1.0"
description = "Notfeed desktop"
authors = ["Notfeed"]
edition = "2021"

[lib]
name = "notfeed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
battery = "0.7.8"
default-net = "0.22"

[features]
default = ["backend-indexeddb"]
backend-indexeddb = []
backend-sqlite = ["dep:tauri-plugin-sql"]
